appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-setup-device
---
- assertVisible: Account setup
- tapOn:
    id: setup-step-SINGLE_DEVICE
- assertVisible: Your chats stay here
- back
- assertVisible: Account setup
- back
- assertVisible:
    id: presentation.complete
