appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-setup-profile
---
- assertVisible: Account setup
- tapOn:
    id: setup-step-PROFILE
- assertVisible: Profile
- back
- assertVisible: Account setup
- back
- assertVisible:
    id: presentation.complete
