appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-setup-relays
---
- assertVisible: Account setup
- tapOn:
    id: setup-step-RELAYS
- assertVisible: Read and write relays
- back
- assertVisible: Account setup
- back
- assertVisible:
    id: presentation.complete
