appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-text-binary
---
- assertVisible: Maestro complete filename.txt
- assertVisible: This file doesn’t appear to contain safe text. Open it in another app.
- tapOn: Back
- assertVisible:
    id: presentation.complete
