appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-text-dialog-copy
---
- assertVisible:
    text: Fixture decoded.txt
- assertVisible:
    text: Fixture decoded first line.*
- tapOn: Copy text
- tapOn: Back
- assertVisible:
    id: presentation.complete
