appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-text-dialog-external
---
- assertVisible:
    text: Fixture decoded.txt
- assertVisible:
    text: Fixture decoded first line.*
- tapOn: More options
- tapOn: Open in another app
- assertVisible:
    id: presentation.complete
