appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-text-invalid
---
- assertVisible: Maestro complete filename.txt
- assertVisible: This file doesn’t use a supported text encoding. Open it in another app.
- tapOn: Back
- assertVisible:
    id: presentation.complete
