appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-text-retry
---
- assertVisible: Couldn’t download this file. Try again or open it in another app.
- tapOn: Retry
- assertVisible:
    id: presentation.complete
