appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-update-reminder-confirm-cancel
---
- assertVisible:
    id: appUpdate.dialog
- assertVisible:
    id: appUpdate.remindLater
- tapOn:
    id: appUpdate.cancel
- assertVisible:
    id: presentation.complete
