appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-update-reminder-confirm
---
- assertVisible:
    id: appUpdate.dialog
- assertVisible:
    id: appUpdate.remindLater
- tapOn:
    id: appUpdate.remindLater
- assertVisible:
    id: presentation.complete
