appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-update-reminder-permission
---
- assertVisible:
    id: appUpdate.dialog
- assertNotVisible:
    id: appUpdate.remindLater
- tapOn:
    id: appUpdate.cancel
- assertVisible:
    id: presentation.complete
