appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-update-retryable
---
- assertVisible: Update failed
- assertVisible:
    id: appUpdate.retry
    enabled: true
- tapOn:
    id: appUpdate.retry
- assertVisible:
    id: presentation.complete
