appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-update-terminal
---
- assertVisible: Update failed
- assertNotVisible:
    id: appUpdate.retry
- assertNotVisible:
    id: appUpdate.install
- tapOn:
    id: appUpdate.cancel
- assertVisible:
    id: presentation.complete
